# BTHSHub-Server

./: .copilotignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Procfile  README.md  app.json  ideas.md  notes.md  security.md  vcpkg.json
include/: global.h  hash.h  jwt.h  lib.h  middleware.h  pdf.h  routes.h  scheduledatabase.h  server.h  teamdatabase.h  userdatabase.h  utils.h
libs/: lib.cpp  linuxsockets.hpp  server.cpp
notes/: notes.md  performance.md  security.md
src/: global.cpp  lib.cpp  middleware.cpp  routes.cpp  server.cpp  server.h  utils.cpp  utils.h
src/database/: hash.cpp  jwt.cpp  jwt.h  scheduledatabase.cpp  teamdatabase.cpp  teamdatabase.h  userdatabase.cpp  userdatabase.h
src/pdf/: pdf.cpp
tests/: firststart.py  hackserver.py  testserver.py
